# gl_shaded_gltfscene

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: Ubuntu.yml  macos.yml  superlinter.yml  ubuntu.yml  window.yml
Builds/CMake/: CompileOptions.cmake
Examples/: CMakeLists.txt
Examples/SimpleExample/: CMakeLists.txt  main.cpp
Includes/: Application.hpp  GLTFSceneApp.hpp  GLTFSceneRenderer.hpp  SampleApp.hpp  SampleRenderer.hpp
Includes/Core/: AssetLoader.hpp  GLTFScene-Impl.hpp  GLTFScene.hpp  Macros.hpp  MathUtils-Impl.hpp  MathUtils.hpp  Vertex.hpp
Includes/GL3/: Application.hpp  AssetLoader.hpp  BoundingBox.hpp  Camera.hpp  DebugUtils.hpp  GLTFScene-Impl.hpp  GLTFScene.hpp  GLTypes.hpp  Mesh.hpp  PerspectiveCamera.hpp  PostProcessing.hpp  Renderer.hpp  Scene.hpp  Shader-Impl.hpp  Shader.hpp  SkyDome.hpp  Texture.hpp  Vertex.hpp  Window.hpp
Libraries/glad/: CMakeLists.txt  glad.cpp  glad.h
Libraries/tinygltf/: tiny_gltf.h
Libraries/tinyobjloader/: CMakeLists.txt
Resources/shaders/: filtercube.vert  gltf.glsl  integrate_brdf.vert  lighting.glsl  material_mode.glsl  output.glsl  pbr.glsl  postprocessing.glsl  prefilter_glossy.frag  quad.glsl  skybox.frag  skybox.vert  tonemapping.glsl  utils.glsl  vertex.glsl
Sources/: Application.cpp  CMakeLists.txt  GLTFSceneApp.cpp  GLTFSceneRenderer.cpp  SampleApp.cpp  SampleRenderer.cpp  main.cpp
Sources/Core/: AssetLoader.cpp  GLTFScene.cpp  Vertex.cpp
Sources/GL3/: Application.cpp  AssetLoader.cpp  BoundingBox.cpp  Camera.cpp  DebugUtils.cpp  GLTFScene.cpp  Mesh.cpp  PerspectiveCamera.cpp  PostProcessing.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  SkyDome.cpp  Texture.cpp  Vertex.cpp  Window.cpp
Tests/UnitTests/: CMakeLists.txt  SimpleTest.cpp
